# assignment-05

./: .gitignore  README.md  brainstorming.md  documentation.md  pyproject.toml  requirements.txt  setup.md
fanfic_site/: Procfile  data.json  db.sqlite3  manage.py  render.yaml  requirements.txt
fanfic_site/fanfic_site/: asgi.py  settings.py  urls.py  wsgi.py
fanfic_site/mails/: apps.py  models.py  urls.py  views.py
fanfic_site/mails/migrations/: 0001_initial.py  0002_rename_archived_mail_is_archived_and_more.py
fanfic_site/mails/templates/mails/: archived.html  mail_form.html  mailbox.html
fanfic_site/media/covers/: detective.avif  school-bus.avif  sea-rocks.avif  sherlock.avif
fanfic_site/media/profile_pics/: typewriter.avif
fanfic_site/stories/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
fanfic_site/stories/migrations/: 0001_initial.py  0002_remove_story_co_author_alter_story_author_chapter.py  0003_genre_story_genre.py  0004_story_cover_image.py  0005_remove_story_content_alter_story_status_and_more.py  0006_message.py  0007_delete_message.py  0008_alter_story_cover_image.py  0009_remove_story_rating.py  0010_alter_story_cover_image.py
fanfic_site/stories/static/stories/: main.css
fanfic_site/stories/templates/stories/: about.html  add_chapter.html  base.html  chapter_detail.html  home.html  story_confirm_delete.html  story_detail.html  story_form.html  user_stories.html
fanfic_site/users/: forms.py  models.py  signals.py  views.py
fanfic_site/users/migrations/: 0001_initial.py  0002_alter_profile_image.py
(+11 files in other folders)
