[project]
name = "fanfic_site"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.1.0",
    "django==4.2.26",
    "django-crispy-forms>=2.5",
    "gunicorn>=24.1.1",
    "pillow>=12.1.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.11.0",
]
